Issue #2379053 by gdaw: Media library layer partially overlapped by left-side admin menu

--- a/modules/wetkit_emberx/css/ember-media.css
+++ b/modules/wetkit_emberx/css/ember-media.css
@@ -4,6 +4,7 @@
 
 .ui-dialog.media-wrapper {
   padding: 0.6em;
+  left: 0px !important;
 }
 .ui-dialog.media-wrapper .ui-dialog-titlebar {
   background: none;
